--- a/src/components/HomePage/TestimonialsCarousel/TestimonialsCarousel.module.css
+++ b/src/components/HomePage/TestimonialsCarousel/TestimonialsCarousel.module.css
@@ -1,10 +1,12 @@
 .testimonialCard {
   width: 100%;
   height: 342px;
-  border-radius: 20px;
+  border-radius: 35.72px;
   padding: 24px;
-  box-shadow: 0px 3.31px 46.07px 4.46px rgba(0, 0, 0, 0.04);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0px 3.31px 46.07px 4.46px #0000000A;
+  display: flex;
+  flex-direction: column;
 }
 
 .testimonialsSwiper :global(.swiper-wrapper) {
@@ -43,7 +45,7 @@
 }
 
 .testimonialsSwiper :global(.swiper-pagination-bullet-active) {
-  background-color: #7c3aed;
+  background-color: #4D3E99;
   transform: scale(1.2);
 }
 
@@ -62,7 +64,6 @@
   width: 200px;
   height: 80%;
   background: linear-gradient(to right, rgba(255, 255, 255, 1), transparent);
-  /* backdrop-filter: blur(20px); */
   z-index: 10;
   pointer-events: none;
 }
