--- a/src/components/HomePage/ServicesSection/ServicesSection.module.css
+++ b/src/components/HomePage/ServicesSection/ServicesSection.module.css
@@ -86,7 +86,7 @@
 }
 
 .centralCard {
-  background-color: #f0fdf4;
+  background-color: #F6FFDB;
   border-radius: 1rem;
   padding: 2rem;
   text-align: center;
